// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`After submit renders correctly when occurs a server error 1`] = `
<form>
  <div
    buttonMessage="Pay"
    error="submit failed"
    errors={Object {}}
    renderButton={[Function]}
    submitting={false}
  >
    Card
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-justify-xs-space-between-20"
    style={
      Object {
        "margin": "30px 0",
      }
    }
  >
    <div
      buttonMessage="Pay"
      error="submit failed"
      errors={Object {}}
      renderButton={[Function]}
      submitting={false}
    >
      Form Fields
    </div>
  </div>
  <div
    style={
      Object {
        "padding": 20,
        "textAlign": "center",
      }
    }
  >
    <h5
      className="MuiTypography-root-108 MuiTypography-h5-124 MuiTypography-colorError-142"
    >
      submit failed
    </h5>
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-justify-xs-center-18"
  >
    <div
      disabled={false}
      text="Pay"
    >
      Button
    </div>
  </div>
</form>
`;

exports[`After submit renders correctly while loading 1`] = `
<form>
  <div
    buttonMessage="Pay"
    errors={Object {}}
    renderButton={[Function]}
    submitting={true}
  >
    Card
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-justify-xs-space-between-20"
    style={
      Object {
        "margin": "30px 0",
      }
    }
  >
    <div
      buttonMessage="Pay"
      errors={Object {}}
      renderButton={[Function]}
      submitting={true}
    >
      Form Fields
    </div>
  </div>
  <div
    style={
      Object {
        "alignSelf": "center",
        "textAlign": "center",
      }
    }
  >
    <div
      className="MuiCircularProgress-root-98 MuiCircularProgress-colorPrimary-101 MuiCircularProgress-indeterminate-100"
      role="progressbar"
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg-103"
        viewBox="22 22 44 44"
      >
        <circle
          className="MuiCircularProgress-circle-104 MuiCircularProgress-circleIndeterminate-106"
          cx={44}
          cy={44}
          fill="none"
          r={20.2}
          strokeWidth={3.6}
          style={Object {}}
        />
      </svg>
    </div>
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-justify-xs-center-18"
  >
    <div
      disabled={true}
      text="Pay"
    >
      Button
    </div>
  </div>
</form>
`;

exports[`Before submit renders correctly before fill form 1`] = `
<form>
  <div
    buttonMessage="Pay"
    errors={Object {}}
    renderButton={[Function]}
    submitting={false}
  >
    Card
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-justify-xs-space-between-20"
    style={
      Object {
        "margin": "30px 0",
      }
    }
  >
    <div
      buttonMessage="Pay"
      errors={Object {}}
      renderButton={[Function]}
      submitting={false}
    >
      Form Fields
    </div>
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-justify-xs-center-18"
  >
    <div
      disabled={false}
      text="Pay"
    >
      Button
    </div>
  </div>
</form>
`;
